force-app/main/default/objects/BGR_KD__c/BGR_KD__c.object-meta.xml
<CustomObject>
    <label>BGR KD</label>
    <nameField>
        <label>Presration KD calc table insert_v1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR KD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>