force-app/main/default/objects/BGR_KD__c/fields/KD__c.field-meta.xml
<CustomField>
    <fullName>KD__c</fullName>
    <label>KD</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>