force-app/main/default/objects/BGR_KD__c/fields/OrificeCode__c.field-meta.xml
<CustomField>
    <fullName>OrificeCode__c</fullName>
    <label>OrificeCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>