force-app/main/default/objects/BGR_KD__c/fields/PresRatio__c.field-meta.xml
<CustomField>
    <fullName>PresRatio__c</fullName>
    <label>PresRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>