force-app/main/default/objects/BGR_KD__c/fields/SizeCode__c.field-meta.xml
<CustomField>
    <fullName>SizeCode__c</fullName>
    <label>SizeCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>1/2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>