force-app/main/default/objects/BGR_KD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SizeCode__c</columns>
    <columns>OrificeCode__c</columns>
    <columns>PresRatio__c</columns>
    <columns>KD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>